overflow-x scroll main view bug fixed

--- a/public/render/blocks/RecommendBar/RecommendBar.css
+++ b/public/render/blocks/RecommendBar/RecommendBar.css
@@ -27,7 +27,8 @@
 
 @media (max-width: 700px) {
     .recommend-bar__list {
-        width: 100%
+        width: 100%;
+        margin-left: 0;
     }
 }
 
