--- a/public/render/blocks/actionBar/ActionBar.css
+++ b/public/render/blocks/actionBar/ActionBar.css
@@ -20,6 +20,7 @@
 @media (max-width: 700px) {
     .action-bar__list {
         width: 100%;
+        margin-left: 0;
     }
 }
 
