--- a/public/render/blocks/categoryBar/CategoryBar.css
+++ b/public/render/blocks/categoryBar/CategoryBar.css
@@ -19,6 +19,7 @@
 @media (max-width: 700px) {
     .category-bar__list {
         width: 100%;
+        margin-left: 0;
     }
 
 }
