--- a/public/render/views/MainView/MainView.css
+++ b/public/render/views/MainView/MainView.css
@@ -8,6 +8,7 @@
     width: inherit;
     height: 90vh;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 
